fixs the layout on desktop devices, and large devices, and spacing in the job listings

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -105,6 +105,9 @@ select {
         padding: 0;
         @include container($main-width);
     }
+    @include breakpoint($l-devices) {
+        @include container($l-devices);
+    }
 }
 .section {
     margin-top: $l-size;
