--- a/sass/layout/_layout.scss
+++ b/sass/layout/_layout.scss
@@ -11,12 +11,13 @@ $susy: (
 /*break points*/
 $bp-mobile: 320px; 
 $bp-tablet: 768px;
-$bp-desktop: 1260px;
+$bp-desktop: 1024px;
+$l-devices: 1300px;
 
 // $bp-mobile-to-tablet: $bp-mobile $bp-tablet;
 // $bp-tablet-to-desktop: $bp-tablet $bp-desktop;
 
-$main-width: 1260px;
+$main-width: 900px;
 $no-gatters: (
 	gutters: 0
 );
@@ -315,4 +316,12 @@ $no-gatters: (
 			}
 		}
 	}
+}
+
+.job_listings {
+	@include span(12 of 12);
+}
+
+.wp-pagenavi {
+	@include span(12 of 12);
 }
